--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+FRONTEND_URL=http://163.44.121.223:3000
+SANCTUM_STATEFUL_DOMAINS=163.44.121.223:3000
+SESSION_DOMAIN=163.44.121.223
