--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -2,7 +2,22 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://163.44.121.223:8080
+
+APP_URL=http://localhost
+#APP_URL=http://192.168.3.3:8080
+#APP_URL=http://160.251.198.171:8080
+
+FRONTEND_URL=http://localhost:3000
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
+SESSION_DOMAIN=localhost
+
+#FRONTEND_URL=http://192.168.3.3:3000
+#SANCTUM_STATEFUL_DOMAINS=192.168.3.3:3000
+#SESSION_DOMAIN=192.168.3.3
+
+#FRONTEND_URL=http://160.251.198.171:3000
+#SANCTUM_STATEFUL_DOMAINS=160.251.198.171:3000
+#SESSION_DOMAIN=160.251.198.171
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -12,7 +27,6 @@ APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
 # PHP_CLI_SERVER_WORKERS=4
-
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
@@ -20,18 +34,18 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
+DB_CONNECTION=mysql
+DB_HOST=
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
+DB_USERNAME=
 DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+#SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -63,7 +77,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-FRONTEND_URL=http://163.44.121.223:3000
-SANCTUM_STATEFUL_DOMAINS=163.44.121.223:3000
-SESSION_DOMAIN=163.44.121.223
